@@ -203,3 +203,4 @@
 
 	* Imported uIP into the tree (see
 	   http://www.sics.se/~adam/uip/index.php/Main_Page)
+	* Adding socket(), bind(), connect()
